added more examples for different topics